bottom bar fixed on mobile

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -913,7 +913,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 /* ********** footer stuff********** */
 .footBar {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 0px;
